# babnote

./: CMakeLists.txt  DBNoteController.cpp  DBNoteController.h  FileView.qml  FileViewBar.qml  FileViewMenu.qml  INoteController.h  Main.qml  MarkdownNote.qml  Note.cpp  Note.h  NoteEditor.qml  NoteExplorer.qml  NoteExplorerBar.qml  README.md  TextNote.qml  dbnotecontroller.cpp  dbnotecontroller.h  main.cpp  main.qml  markdownnote.cpp  markdownnote.h  note.cpp  note.h  notecontroller.h  notemanager.cpp  notemanager.h  readme.md  types.h
.cache/clangd/index/: main.cpp.DDD96DFA83487F11.idx  markdownnote.cpp.3B7FB337BEF932DF.idx  markdownnote.h.B676F9918C431E59.idx  note.cpp.37805C48068A5B30.idx  note.h.04587C21A5A39F7C.idx  notemanager.cpp.E1EBC7B6DD4576A5.idx  notemanager.h.D967B3F48B484BE0.idx
modules/BabNote/: CMakeLists.txt
modules/BabNote/qml/: FileView.qml  FileViewBar.qml  FileViewMenu.qml  Main.qml  TextNote.qml
modules/BabNote/qml/singletons/: AppSettings.qml
modules/BabNoteElements/: CMakeLists.txt
modules/BabNoteElements/src/: DBNoteController.cpp  DBNoteController.h  NetworkController.cpp  NetworkController.h  Note.cpp  Note.h  NoteModel.cpp  NoteModel.h  SqlNoteModel.cpp  SqlNoteModel.h
